[gd_scene load_steps=2 format=3]

[ext_resource path="res://scripts/Main.gd" type="Script" id=1]

[node name="Main" type="Node2D"]
script = ExtResource("1")

[node name="TickLabel" type="Label" parent="."]
position = Vector2(20, 20)
text = "Tick: 0"

[node name="TimeLabel" type="Label" parent="."]
position = Vector2(20, 48)
text = "Zeit: 0.00 s"

[node name="StatusLabel" type="Label" parent="."]
position = Vector2(20, 80)
text = "Status: ---"
modulate = Color(1, 0.4, 0.4, 1)
visible = false
